force-app/main/default/objects/Evaluation_Form__c/fields/Removal_Work_Order_ERP_Nr__c.field-meta.xml
<CustomField>
    <fullName>Removal_Work_Order_ERP_Nr__c</fullName>
    <label>Removal Work Order ERP Nr</label>
    <length>10</length>
    <type>Text</type>
</CustomField>