force-app/main/default/objects/Evaluation_Form__c/fields/Rental_Agreement_Contact__c.field-meta.xml
<CustomField>
    <fullName>Rental_Agreement_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rental Agreement Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Demo Requests (Rental Agreement Contact)</relationshipLabel>
    <relationshipName>Demo_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>