force-app/main/default/objects/Evaluation_Form__c/fields/Rental_Agreement_Nr__c.field-meta.xml
<CustomField>
    <fullName>Rental_Agreement_Nr__c</fullName>
    <label>Rental Agreement Nr.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>