force-app/main/default/objects/Evaluation_Form__c/fields/Rental_Service_Technician__c.field-meta.xml
<CustomField>
    <fullName>Rental_Service_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select if Rental Service Technician is Required</inlineHelpText>
    <label>Rental Service Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Evaluation_Forms7</relationshipName>
    <type>Lookup</type>
</CustomField>