force-app/main/default/objects/Evaluation_Form__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Same as Request/Return</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Pick-Up</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Demo with patient</fullName>
            </value>
            <value>
                <fullName>Demo without patient</fullName>
            </value>
            <value>
                <fullName>Equipment on Loan (with patient)</fullName>
            </value>
            <value>
                <fullName>Equipment on Loan (without patient)</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>Product Evaluation with Patient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>