force-app/main/default/objects/Evaluation_Form__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <formula>CreatedBy.FirstName+&apos; &apos;+ CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested By</label>
    <type>Text</type>
</CustomField>