force-app/main/default/objects/Evaluation_Form__c/fields/Requested_Pick_Up_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Pick_Up_Date_Time__c</fullName>
    <description>This field has been created as part of CR00029666.</description>
    <label>Requested Pick Up Date Time</label>
    <type>DateTime</type>
</CustomField>