force-app/main/default/objects/Evaluation_Form__c/fields/Requested_Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Pickup_Date__c</fullName>
    <label>Requested Pickup Date</label>
    <type>Date</type>
</CustomField>