force-app/main/default/objects/Evaluation_Form__c/fields/Return_Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Return_Delivery_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select when the document signed by the customer is received (for product returned)</inlineHelpText>
    <label>Return Delivery Note</label>
    <type>Checkbox</type>
</CustomField>