force-app/main/default/objects/Evaluation_Form__c/fields/Return_Return_To_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_Return_To_Airport_Code__c</fullName>
    <label>Return To Airport Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>