force-app/main/default/objects/Evaluation_Form__c/fields/Return_To__c.field-meta.xml
<CustomField>
    <fullName>Return_To__c</fullName>
    <label>Return To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Center</fullName>
            </value>
            <value>
                <fullName>RDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>