force-app/main/default/objects/Evaluation_Form__c/fields/Rqst_Date_of_Delivery_to_Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Rqst_Date_of_Delivery_to_Service_Center__c</fullName>
    <label>Rqst Date of Delivery</label>
    <type>Date</type>
</CustomField>