force-app/main/default/objects/Evaluation_Form__c/fields/Schedule_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send CEVA Delivery</label>
    <type>Checkbox</type>
</CustomField>