force-app/main/default/objects/Evaluation_Form__c/fields/Schedule_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send CEVA Pickup</label>
    <type>Checkbox</type>
</CustomField>