force-app/main/default/objects/Evaluation_Form__c/fields/Scheduled_Demo_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Demo_End_Date__c</fullName>
    <formula>IF(NOT(ISNULL( Rqst_Date_of_Delivery_to_Service_Center__c )), Rqst_Date_of_Delivery_to_Service_Center__c + 30 , Rqst_Date_of_Delivery_to_Service_Center__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Demo End Date</label>
    <type>Date</type>
</CustomField>