force-app/main/default/objects/Evaluation_Form__c/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Evaluation Forms (Secondary Contact)</relationshipLabel>
    <relationshipName>Evaluation_Forms2</relationshipName>
    <type>Lookup</type>
</CustomField>