force-app/main/default/objects/Evaluation_Form__c/fields/Serial_number_is_not_null__c.field-meta.xml
<CustomField>
    <fullName>Serial_number_is_not_null__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serial number is not null</label>
    <type>Checkbox</type>
</CustomField>