force-app/main/default/objects/Evaluation_Form__c/fields/Serial_Number_LL__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_LL__c</fullName>
    <label>Serial Number LL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>