force-app/main/default/objects/Evaluation_Form__c/fields/Service_Center_City__c.field-meta.xml
<CustomField>
    <fullName>Service_Center_City__c</fullName>
    <formula>Service_Center_Name__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Service Center City</label>
    <type>Text</type>
</CustomField>