force-app/main/default/objects/Evaluation_Form__c/fields/Service_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Center_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery To Service Center Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service_Center_Address__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Center_Address__c</referenceTo>
    <relationshipLabel>Evaluation Forms</relationshipLabel>
    <relationshipName>Evaluation_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>