force-app/main/default/objects/Evaluation_Form__c/fields/Service_Center_State__c.field-meta.xml
<CustomField>
    <fullName>Service_Center_State__c</fullName>
    <formula>Service_Center_Name__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Service Center State</label>
    <type>Text</type>
</CustomField>