force-app/main/default/objects/Evaluation_Form__c/fields/Service_Center_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Center_Street_Address__c</fullName>
    <formula>Service_Center_Name__r.Street_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Service Center Street Address</label>
    <type>Text</type>
</CustomField>