force-app/main/default/objects/Evaluation_Form__c/fields/Service_Center_Zip__c.field-meta.xml
<CustomField>
    <fullName>Service_Center_Zip__c</fullName>
    <formula>Service_Center_Name__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Service Center Zip</label>
    <type>Text</type>
</CustomField>