force-app/main/default/objects/Evaluation_Form__c/fields/Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Date__c</fullName>
    <label>Pickup Date</label>
    <type>Date</type>
</CustomField>