force-app/main/default/objects/Evaluation_Form__c/fields/Shipping_Customer__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Customer__c</fullName>
    <label>Shipping Customer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>