force-app/main/default/objects/Evaluation_Form__c/fields/sys_crsomsca__c.field-meta.xml
<CustomField>
    <fullName>sys_crsomsca__c</fullName>
    <formula>IF ( Opportunity__r.CRS_OMS_CA__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.CRS_OMS_CA__r.LastName = $User.FirstName &amp; &quot; &quot; &amp; $User.LastName, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sys_crsomsca</label>
    <type>Text</type>
</CustomField>