force-app/main/default/objects/Evaluation_Form__c/fields/sys_Delivery_From__c.field-meta.xml
<CustomField>
    <fullName>sys_Delivery_From__c</fullName>
    <formula>CASE( Pickup_From_Delievery__c , &quot;RDC&quot;,  TEXT(RDC_Location__c) ,
 &quot;Service Center&quot;,   Service_Center_Name__r.Name &amp; BR()  &amp;  Service_Center_Street_Address__c  &amp; BR() &amp;  Service_Center_City__c &amp; &apos;, &apos; &amp;  Service_Center_State__c &amp; &apos;  &apos; &amp; Service_Center_Zip__c ,
&quot;Customer&quot;,  Comments_Notes__c ,
&quot;Nothing Selected to Pickup From&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sys Delivery From</label>
    <type>Text</type>
</CustomField>