force-app/main/default/objects/Evaluation_Form__c/fields/sys_Delivery_To__c.field-meta.xml
<CustomField>
    <fullName>sys_Delivery_To__c</fullName>
    <formula>CASE( Deliver_To__c, &quot;RDC&quot;, TEXT(RDC_Location__c) , 
&quot;Service Center&quot;, Service_Center_Name__r.Name &amp; BR() &amp; Service_Center_Street_Address__c &amp; BR() &amp; Service_Center_City__c &amp; &apos;, &apos; &amp; Service_Center_State__c &amp; &apos; &apos; &amp; Service_Center_Zip__c , 
&quot;Customer&quot;,    Opportunity__r.Account.Name &amp; BR() &amp;  Opportunity__r.Account.BillingStreet &amp; BR() &amp;   Opportunity__r.Account.BillingCity &amp; &apos;, &apos; &amp;  Opportunity__r.Account.BillingState &amp; &apos;  &apos; &amp;  Opportunity__r.Account.BillingPostalCode, 
&quot;Nothing Selected to Deliever To&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sys Delivery To</label>
    <type>Text</type>
</CustomField>