force-app/main/default/objects/Evaluation_Form__c/fields/Total_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Items__c</fullName>
    <label>Total Items</label>
    <summarizedField>Products_Requested__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Products_Requested__c.Product_Type__c</field>
        <operation>notEqual</operation>
        <value>Patient Monitoring/CFCM</value>
    </summaryFilterItems>
    <summaryForeignKey>Products_Requested__c.Evaluation_Form__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>