force-app/main/default/objects/Evaluation_Form__c/fields/Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Start_Date__c</fullName>
    <formula>IF( ISPICKVAL(Deliver_To__c, &apos;Customer&apos;),
     Delivery_Date__c ,
     IF(OR(
          MOD(Delivery_Date__c - DATE(1900, 1, 7), 7)= 1,
          MOD(Delivery_Date__c - DATE(1900, 1, 7), 7) = 2),
          Delivery_Date__c +3,
          Delivery_Date__c + 5
     )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial Start Date</label>
    <type>Date</type>
</CustomField>