force-app/main/default/objects/Evaluation_Form__c/fields/Ward__c.field-meta.xml
<CustomField>
    <fullName>Ward__c</fullName>
    <label>Ward</label>
    <length>40</length>
    <type>Text</type>
</CustomField>