force-app/main/default/objects/Evaluation_Form__c/fields/Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Number__c</fullName>
    <label>JDE Contact #</label>
    <length>60</length>
    <type>Text</type>
</CustomField>