force-app/main/default/objects/Evaluation_Form__c/recordTypes/Architectural_Eval_Request_Form.recordType-meta.xml
<RecordType>
    <fullName>Architectural_Eval_Request_Form</fullName>
    <active>false</active>
    <description>Architectural Evaluation Request Form</description>
    <label>Architectural Eval Request Form</label>
</RecordType>