force-app/main/default/objects/Evaluation_Form__c/recordTypes/Capital_Frames_and_Furniture_Eval_Form.recordType-meta.xml
<RecordType>
    <fullName>Capital_Frames_and_Furniture_Eval_Form</fullName>
    <active>true</active>
    <description>Capital Frames and Furniture Evaluation Form</description>
    <label>Capital Frames and Furniture Eval Form</label>
</RecordType>