force-app/main/default/objects/Evaluation_Form__c/recordTypes/International.recordType-meta.xml
<RecordType>
    <fullName>International</fullName>
    <active>true</active>
    <description>International Product Evaluation form.</description>
    <label>International</label>
</RecordType>