force-app/main/default/objects/Evaluation_Form__c/recordTypes/LIKO_Eval_request_form.recordType-meta.xml
<RecordType>
    <fullName>LIKO_Eval_request_form</fullName>
    <active>true</active>
    <description>LIKO Evaluation Request Form</description>
    <label>LIKO Eval Request Form</label>
</RecordType>