force-app/main/default/objects/Evaluation_Form__c/validationRules/Demo_Start_Date_cannot_be_in_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Demo_Start_Date_cannot_be_in_past</fullName>
    <active>true</active>
    <description>This validation rule is used to check if Demo Start Date is not a past date.</description>
    <errorConditionFormula>AND
(
Rqst_Date_of_Delivery_to_Service_Center__c &lt; TODAY(), 
ISCHANGED(Rqst_Date_of_Delivery_to_Service_Center__c) 
)</errorConditionFormula>
    <errorDisplayField>Rqst_Date_of_Delivery_to_Service_Center__c</errorDisplayField>
    <errorMessage>Demo Start Date cannot be in past.</errorMessage>
</ValidationRule>