force-app/main/default/objects/Evaluation_Form__c/validationRules/End_date_before_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_before_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>Evaluation_End_Date__c &lt;  Rqst_Date_of_Delivery_to_Service_Center__c</errorConditionFormula>
    <errorDisplayField>Evaluation_End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be earlier than Start Date!</errorMessage>
</ValidationRule>