force-app/main/default/objects/Evaluation_Form__c/validationRules/INT_Cannot_Cancel_shipped_demos.validationRule-meta.xml
<ValidationRule>
    <fullName>INT_Cannot_Cancel_shipped_demos</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Cancelled__c = True,
NOT(ISNULL( Shipment_Date__c))
 
)</errorConditionFormula>
    <errorDisplayField>Cancelled__c</errorDisplayField>
    <errorMessage>You cannot cancel a demo after products have been shipped!</errorMessage>
</ValidationRule>