force-app/main/default/objects/Evaluation_Form__c/validationRules/Max_duration_90_days.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_duration_90_days</fullName>
    <active>true</active>
    <errorConditionFormula>(Evaluation_End_Date__c  -  Rqst_Date_of_Delivery_to_Service_Center__c ) &gt; 90</errorConditionFormula>
    <errorDisplayField>Evaluation_End_Date__c</errorDisplayField>
    <errorMessage>Evaluation period cannot be more than 90 days</errorMessage>
</ValidationRule>