force-app/main/default/objects/Evaluation_Form__c/validationRules/Need_a_Pickup_Service_Center.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_a_Pickup_Service_Center</fullName>
    <active>true</active>
    <description>When field rep sets type to Pickup must specify if the pickup in coming from Customer or Service Center</description>
    <errorConditionFormula>AND(
ISPICKVAL( Request_Type__c , &apos;Pick-Up&apos;) ,
TEXT( Pickup_From__c ) = null
)</errorConditionFormula>
    <errorDisplayField>Pickup_From__c</errorDisplayField>
    <errorMessage>Please indicate where Evaluation Equipment should be picked up from.</errorMessage>
</ValidationRule>