force-app/main/default/objects/Evaluation_Form__c/validationRules/PO_Num_Required_if_NC_PO_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Num_Required_if_NC_PO_Required</fullName>
    <active>true</active>
    <description>PO Number is Required if the N/C PO Required is marked as Yes</description>
    <errorConditionFormula>ISPICKVAL(N_C_PO_required__c ,&quot;Yes&quot;) &amp;&amp; ISBLANK(  PO__c )</errorConditionFormula>
    <errorDisplayField>PO__c</errorDisplayField>
    <errorMessage>Please Enter a PO Number</errorMessage>
</ValidationRule>