force-app/main/default/objects/Evaluation_Form__c/validationRules/RDC_for_return_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>RDC_for_return_Location</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Schedule_Pickup__c = True,
ISPICKVAL(Return_To__c , &apos;RDC&apos;),
ISBLANK( Pickup_RDC_Location__c )
)</errorConditionFormula>
    <errorDisplayField>Pickup_RDC_Location__c</errorDisplayField>
    <errorMessage>Please identify the RDC to return the items to.</errorMessage>
</ValidationRule>