force-app/main/default/objects/Evaluation_Form__c/validationRules/Return_Date_cannot_be_in_the_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Date_cannot_be_in_the_future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Product_Return_Date__c),
Product_Return_Date__c &gt;  TODAY()
)</errorConditionFormula>
    <errorDisplayField>Product_Return_Date__c</errorDisplayField>
    <errorMessage>Product Return Date cannot be in the future</errorMessage>
</ValidationRule>