force-app/main/default/objects/Evaluation_Form__c/validationRules/Service_Center_for_pickup_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Center_for_pickup_Location</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Pickup_From_Delievery__c , &apos;Service Center&apos;),
ISBLANK( Service_Center_Name__c )
)</errorConditionFormula>
    <errorDisplayField>Service_Center_Name__c</errorDisplayField>
    <errorMessage>Please identify the Service Center to pickup the items from.</errorMessage>
</ValidationRule>