force-app/main/default/objects/Evaluation_Form__c/validationRules/Service_Center_for_return_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Center_for_return_Location</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Schedule_Pickup__c = True,
ISPICKVAL(Return_To__c , &apos;Service Center&apos;),
ISBLANK( Pickup_Service_Center_Name__c )
)</errorConditionFormula>
    <errorDisplayField>Pickup_Service_Center_Name__c</errorDisplayField>
    <errorMessage>Please identify the Service Center to return the items to.</errorMessage>
</ValidationRule>