force-app/main/default/objects/Evaluation_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Date__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Customer__c</columns>
    <columns>Service_Center_Name__c</columns>
    <columns>CRS__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Pickup_Status__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Pickup_Date_from_Service_Center__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Comments_Notes__c</columns>
    <columns>Comments_Special_Instructions__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
    <language>en_US</language>
</ListView>