force-app/main/default/objects/Evaluation_Form__c/listViews/AU_Demo_Requests.listView-meta.xml
<ListView>
    <fullName>AU_Demo_Requests</fullName>
    <columns>NAME</columns>
    <columns>Evaluation_Status__c</columns>
    <columns>Rqst_Date_of_Delivery_to_Service_Center__c</columns>
    <columns>Evaluation_End_Date__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Country__c</field>
        <operation>equals</operation>
        <value>Australia,New Zealand</value>
    </filters>
    <label>AU Demo Requests</label>
    <sharedTo>
        <group>INT_APAC_ANZ_Back_Office</group>
        <group>INT_APAC_ANZ_Sales</group>
    </sharedTo>
</ListView>