force-app/main/default/objects/Evaluation_Form__c/listViews/Cdn_Evaluation_Requests.listView-meta.xml
<ListView>
    <fullName>Cdn_Evaluation_Requests</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Evaluation_Status__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Country__c</field>
        <operation>equals</operation>
        <value>Canada</value>
    </filters>
    <label>Cdn Evaluation Requests</label>
</ListView>