force-app/main/default/objects/Evaluation_Form__c/listViews/CEVA_Eval_Needs_Costs_View.listView-meta.xml
<ListView>
    <fullName>CEVA_Eval_Needs_Costs_View</fullName>
    <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Date__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CRS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cost__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Delivered</value>
    </filters>
    <filters>
        <field>Pickup_Cost__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Pickup_Status__c</field>
        <operation>equals</operation>
        <value>Delievered</value>
    </filters>
    <label>CEVA Eval Needs Costs View</label>
    <language>en_US</language>
</ListView>