force-app/main/default/objects/Evaluation_Form__c/listViews/Copie_de_ITA_7_All_Demo_Requests.listView-meta.xml
<ListView>
    <fullName>Copie_de_ITA_7_All_Demo_Requests</fullName>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Asset__c</columns>
    <columns>Serial_Number_LL__c</columns>
    <columns>Evaluation_Status__c</columns>
    <columns>Rqst_Date_of_Delivery_to_Service_Center__c</columns>
    <columns>Evaluation_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Country__c</field>
        <operation>equals</operation>
        <value>France</value>
    </filters>
    <label>FRA 7. All Demo Requests</label>
</ListView>