force-app/main/default/objects/Evaluation_Form__c/listViews/Copy_of_Cdn_Evaluation_Requests.listView-meta.xml
<ListView>
    <fullName>Copy_of_Cdn_Evaluation_Requests</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Product__c</columns>
    <columns>Customer__c</columns>
    <columns>Evaluation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Country__c</field>
        <operation>equals</operation>
        <value>Canada</value>
    </filters>
    <filters>
        <field>Evaluation_Status__c</field>
        <operation>equals</operation>
        <value>Approved,Product Shipped,Requested Pick Up</value>
    </filters>
    <label>All Active Cdn Evaluation Requests</label>
</ListView>