force-app/main/default/objects/Evaluation_Form__c/listViews/CRS_Eval_View.listView-meta.xml
<ListView>
    <fullName>CRS_Eval_View</fullName>
    <booleanFilter>(1 AND 2 AND 3 AND 8) OR (1 AND 4 AND 6 AND 8) OR (1 AND 5 AND 7 AND 8)</booleanFilter>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Customer__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Date__c</columns>
    <columns>Comments_Notes__c</columns>
    <columns>Comments_Special_Instructions__c</columns>
    <columns>Pickup_Comments__c</columns>
    <columns>Evaluation_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sys_crsomsca__c</field>
        <operation>equals</operation>
        <value>YES</value>
    </filters>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Serial_number_is_not_null__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Pick-Up</value>
    </filters>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Delivery</value>
    </filters>
    <filters>
        <field>Schedule_Pickup__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Schedule_Pickup__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Evaluation_Completed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>CRS Eval View</label>
    <language>en_US</language>
</ListView>